--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "https://github.com/xhellsdx/git-commands-constructor.git"
   },
-  "version": "1.0.0",
+  "version": "1.0.1",
   "engines": {
     "vscode": "^1.71.0"
   },
@@ -27,11 +27,11 @@
     "configuration": {
       "title": "Git Commands Constructor",
       "properties": {
-        "gitCommandsConstructor.taskPrefix": {
+        "gitCommandsConstructor.taskPattern": {
           "type": "string",
           "scope": "window",
           "default": "",
-          "description": "Prefix of tasks of git branches. For example, if the task branch is called 'WMS-123', then you need to set the prefix as 'WMS'"
+          "description": "RegExp of tasks of git branches. For example, if the task branch is called 'WMS-123', then you need to set the pattern as '^WMS-\\d+'"
         },
         "gitCommandsConstructor.commands": {
           "type": "array",
@@ -88,16 +88,16 @@
   },
   "scripts": {
     "build": "vsce package",
-    "vscode:prepublish": "npm run package",
     "compile": "webpack",
-    "watch": "webpack --watch",
-    "package": "webpack --mode production --devtool hidden-source-map",
     "compile-tests": "tsc -p . --outDir out",
-    "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "lint:fix": "npm run lint -- --fix",
-    "test": "node ./out/test/runTest.js"
+    "package": "webpack --mode production --devtool hidden-source-map",
+    "pretest": "npm run compile-tests && npm run compile && npm run lint",
+    "test": "node ./out/test/runTest.js",
+    "vscode:prepublish": "npm run package",
+    "watch": "webpack --watch",
+    "watch-tests": "tsc -p . -w --outDir out"
   },
   "dependencies": {
     "uuid": "^9.0.0"
